--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -12,7 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
-	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="style.css">
 	<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
