--- a/testimonials-grid-section/index.html
+++ b/testimonials-grid-section/index.html
@@ -12,7 +12,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
