--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -22,7 +22,7 @@
 		<div class="nav__backdrop" data-js="nav-backdrop"></div>
 
 		<div class="nav__wrapper wrapper">
-			<a class="nav__logo" href="/"><img src="images/logo.svg" alt="Manage Logo" /></a>
+			<a class="nav__logo" href="/manage-landing-page/"><img src="images/logo.svg" alt="Manage Logo" /></a>
 			<button class="nav__menu" data-js="nav-toggler">
 				<ion-icon class="nav__menu__icon-open" name="menu-sharp"></ion-icon>
 				<ion-icon class="nav__menu__icon-close" name="close-sharp"></ion-icon>
