--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/manage-landing-page/">
 
 	<title>Frontend Mentor | Manage landing page</title>
 	<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/manage-landing-page/style.css">
 	<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
@@ -22,7 +22,8 @@
 		<div class="nav__backdrop" data-js="nav-backdrop"></div>
 
 		<div class="nav__wrapper wrapper">
-			<a class="nav__logo" href="/manage-landing-page/"><img src="images/logo.svg" alt="Manage Logo" /></a>
+			<a class="nav__logo" href="/manage-landing-page"><img src="/manage-landing-page/images/logo.svg"
+					alt="Manage Logo" /></a>
 			<button class="nav__menu" data-js="nav-toggler">
 				<ion-icon class="nav__menu__icon-open" name="menu-sharp"></ion-icon>
 				<ion-icon class="nav__menu__icon-close" name="close-sharp"></ion-icon>
@@ -43,21 +44,23 @@
 		<div class="wrapper">
 			<section class="hero">
 				<div class="hero__info">
-					<img class="hero__bg-pattern bg-pattern" src="images/bg-tablet-pattern.svg" alt="background pattern">
+					<img class="hero__bg-pattern bg-pattern" src="/manage-landing-page/images/bg-tablet-pattern.svg"
+						alt="background pattern">
 					<h1 class="hero__header">Bring everyone together to build better products.</h1>
 					<p class="hero__text">Manage makes it simple tor software teams to plan day-to-day tasks while keeping the
 						larger team goals in view.</p>
 					<button class="btn btn-primary btn-shadow hero__btn-cta">Get Started</button>
 				</div>
 
-				<img class="hero__illustration" src="images/illustration-intro.svg" alt="Illustration">
+				<img class="hero__illustration" src="/manage-landing-page/images/illustration-intro.svg" alt="Illustration">
 			</section>
 		</div>
 
 		<section class="content">
 			<div class="content-wrapper wrapper">
 
-				<img class="content__bg-pattern bg-pattern" src="images/bg-tablet-pattern.svg" alt="background pattern">
+				<img class="content__bg-pattern bg-pattern" src="/manage-landing-page/images/bg-tablet-pattern.svg"
+					alt="background pattern">
 
 				<div class="content-ask">
 					<h1 class="content-ask__header">What's different about Manage?</h1>
@@ -111,7 +114,8 @@
 
 			<div class="testimonials__cards" data-js="glider-testimonials">
 				<div class="testimonials__card">
-					<img class="testimonials__profile-picture" src="images/avatar-anisha.png" alt="Testimonial Profile Picture">
+					<img class="testimonials__profile-picture" src="/manage-landing-page/images/avatar-anisha.png"
+						alt="Testimonial Profile Picture">
 					<h6 class="testimonials__profile-name">Anisha Li</h6>
 					<p class="testimonials__profile-message">"Manage has supercharged our team's workflow. The ability to
 						maintain
@@ -119,7 +123,8 @@
 				</div>
 
 				<div class="testimonials__card">
-					<img class="testimonials__profile-picture" src="images/avatar-ali.png" alt="Testimonial Profile Picture">
+					<img class="testimonials__profile-picture" src="/manage-landing-page/images/avatar-ali.png"
+						alt="Testimonial Profile Picture">
 					<h6 class="testimonials__profile-name">Ali Bravo</h6>
 					<p class="testimonials__profile-message">"We have been able to cancel so many other subscriptions since
 						using
@@ -127,14 +132,16 @@
 				</div>
 
 				<div class="testimonials__card">
-					<img class="testimonials__profile-picture" src="images/avatar-richard.png" alt="Testimonial Profile Picture">
+					<img class="testimonials__profile-picture" src="/manage-landing-page/images/avatar-richard.png"
+						alt="Testimonial Profile Picture">
 					<h6 class="testimonials__profile-name">Richard Watts</h6>
 					<p class="testimonials__profile-message">"Manage allows us to provide structure and process. It keeps us
 						organized and focused. I can't stop recommending them to everyone I talk to!"</p>
 				</div>
 
 				<div class="testimonials__card">
-					<img class="testimonials__profile-picture" src="images/avatar-shanai.png" alt="Testimonial Profile Picture">
+					<img class="testimonials__profile-picture" src="/manage-landing-page/images/avatar-shanai.png"
+						alt="Testimonial Profile Picture">
 					<h6 class="testimonials__profile-name">Shanai Gough</h6>
 					<p class="testimonials__profile-message">"Their software allows us to track, manage and collaborate on our
 						projects from anywhere. It keeps the whole team in- sync without being intrusive. "</p>
@@ -194,7 +201,7 @@
 					</a></li>
 			</ul>
 
-			<img src="images/logo_light.svg" alt="Manage Logo" class="footer__logo">
+			<img src="/manage-landing-page/images/logo_light.svg" alt="Manage Logo" class="footer__logo">
 
 			<p class="footer__copyright">Copyright &copy; 2020. All Rights Reserved</p>
 		</div>
