--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="/manage-landing-page/">
+	<link rel="icon" type="image/png" sizes="32x32" href="/manage-landing-page/images/favicon-32x32.png">
 
 	<title>Frontend Mentor | Manage landing page</title>
 	<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam:wght@400;500;700&display=swap" rel="stylesheet">
@@ -209,7 +209,7 @@
 
 	<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
-	<script src="app.js"></script>
+	<script src="/manage-landing-page/app.js"></script>
 </body>
 
 </html>
