--- a/testimonials-grid-section/index.html
+++ b/testimonials-grid-section/index.html
@@ -6,13 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/testimonials-grid-section/images/favicon-32x32.png">
 
 	<title>Frontend Mentor | Testimonials Grid Section</title>
 
 	<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/testimonials-grid-section/style.css">
 </head>
 
 <body>
@@ -20,7 +20,8 @@
 		<section class="testimonials">
 			<div class="testimonials__1 testimonials--wrapper">
 				<header class="testimonials__profile">
-					<img class="testimonials__profile__picture" src="images/image-daniel.jpg" alt="Profile Picture">
+					<img class="testimonials__profile__picture" src="/testimonials-grid-section/images/image-daniel.jpg"
+						alt="Profile Picture">
 					<h6 class="testimonials__profile__name">Daniel Clifford</h6>
 					<p class="testimonials__profile__status">Verfied Graduate</p>
 				</header>
@@ -39,7 +40,8 @@
 
 			<div class="testimonials__2 testimonials--wrapper">
 				<header class="testimonials__profile">
-					<img class="testimonials__profile__picture" src="images/image-jonathan.jpg" alt="Profile Picture">
+					<img class="testimonials__profile__picture" src="/testimonials-grid-section/images/image-jonathan.jpg"
+						alt="Profile Picture">
 					<h6 class="testimonials__profile__name">Jonathan Walkers</h6>
 					<p class="testimonials__profile__status">Verfied Graduate</p>
 				</header>
@@ -51,7 +53,8 @@
 
 			<div class="testimonials__3 testimonials--wrapper">
 				<header class="testimonials__profile">
-					<img class="testimonials__profile__picture" src="images/image-jeanette.jpg" alt="Profile Picture">
+					<img class="testimonials__profile__picture" src="/testimonials-grid-section/images/image-jeanette.jpg"
+						alt="Profile Picture">
 					<h6 class="testimonials__profile__name">Jeanette Harmon</h6>
 					<p class="testimonials__profile__status">Verfied Graduate</p>
 				</header>
@@ -63,7 +66,8 @@
 
 			<div class="testimonials__4 testimonials--wrapper">
 				<header class="testimonials__profile ">
-					<img class="testimonials__profile__picture" src="images/image-patrick.jpg" alt="Profile Picture">
+					<img class="testimonials__profile__picture" src="/testimonials-grid-section/images/image-patrick.jpg"
+						alt="Profile Picture">
 					<h6 class="testimonials__profile__name">Patrick Abrams</h6>
 					<p class="testimonials__profile__status">Verfied Graduate</p>
 				</header>
@@ -79,7 +83,8 @@
 
 			<div class="testimonials__5 testimonials--wrapper">
 				<header class="testimonials__profile">
-					<img class="testimonials__profile__picture" src="images/image-kira.jpg" alt="Profile Picture">
+					<img class="testimonials__profile__picture" src="/testimonials-grid-section/images/image-kira.jpg"
+						alt="Profile Picture">
 					<h6 class="testimonials__profile__name">Kira Whittle</h6>
 					<p class="testimonials__profile__status">Verfied Graduate</p>
 				</header>
