--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -6,175 +6,214 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/easybank-landing-page/images/favicon-32x32.png">
 
 	<title>Frontend Mentor | Easybank landing page</title>
 
 	<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-	<style>
-		.attribution {
-			font-size: 11px;
-			text-align: center;
-		}
-
-		.attribution a {
-			color: hsl(228, 45%, 44%);
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="/easybank-landing-page/style.css">
 </head>
 
-<body>
+<body data-scroll-lock="false" data-js="body">
 
-	<nav class="nav">
-		<div class="nav__wrapper wrapper">
-			<img class="nav__logo" src="images/logo-for-nav.svg" alt="easybank logo">
-			<ul class="nav__list">
-				<li class="nav__li"><a href="#">Home</a></li>
-				<li class="nav__li"><a href="#">About</a></li>
-				<li class="nav__li"><a href="#">Contact</a></li>
-				<li class="nav__li"><a href="#">Blog</a></li>
-				<li class="nav__li"><a href="#">Careers</a></li>
-			</ul>
-			<button class="nav__toggler">
-				<img src="images/icon-hamburger.svg" alt="nav toggler" class="nav__toggler-icon">
-			</button>
+	<header class="page-header">
+		<div class="page-header__wrapper wrapper">
+			<a href="#" class="page-header__logo" aria-label="Easybank Logo"><img
+					src="/easybank-landing-page/images/logo-for-nav.svg" alt="Easybank Logo"></a>
+			<nav class="primary-nav" aria-label="Primary" data-js="primary-nav" data-primary-nav-toggled-open="false">
+				<ul class="primary-nav__list">
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Careers</a></li>
+				</ul>
+				<div class="primary-nav__click-catcher" data-js="primary-nav__click-catcher"></div>
+
+				<button class="primary-nav__toggler" aria-label="Nav Toggle" data-js="primary-nav__toggler">
+					<img class="primary-nav__toggler-icon primary-nav__toggler-icon--open"
+						src="/easybank-landing-page/images/icon-hamburger.svg" alt="Navigation Toggle Icon">
+					<img class="primary-nav__toggler-icon primary-nav__toggler-icon--close"
+						src="/easybank-landing-page/images/icon-close.svg" alt="Navigation Toggle Icon">
+				</button>
+			</nav>
 			<!-- button for desktop view -->
-			<!-- <button class="btn nav__btn-cta">Request Invite</button> -->
+			<button class="btn-cta page-header__btn-cta" aria-label="Request Invite">Request Invite</button>
 		</div>
-	</nav>
+	</header>
 
-	<section class="hero">
-		<div class="hero__wrapper wrapper">
-			<div class="hero__info">
-				<h1 class="hero__title">Next generation digital banking</h1>
-				<p class="hero__paragraph">Take your financial life online. Your Easybank account will be a one-stop-shopfor
-					spending, saving, budgeting, investing, and much more.</p>
-				<button class="btn hero__btn-cta">Request Invite</button>
+
+	<main>
+		<section class="hero">
+			<div class="hero__wrapper wrapper">
+				<div class="hero__bg-pattern"></div>
+				<article class="hero__info">
+					<h1 class="hero__title">Next generation digital banking</h1>
+					<p class="hero__paragraph">Take your financial life online. Your Easybank account will be a one-stop-shop for
+						spending, saving, budgeting, investing, and much more.</p>
+					<button class="btn-cta hero__btn-cta" aria-label="Request Invite">Request Invite</button>
+				</article>
+
+				<img class="hero__image" src="/easybank-landing-page/images/image-mockups.png" alt="Easybank Nockups">
 			</div>
+		</section>
 
-			<img src="images/image-mockups.png" alt="easybank mockups" class="hero__image">
-		</div>
-	</section>
+		<section class="introduction">
+			<div class="introduction__wrapper wrapper">
+				<header class="introduction__why-choose-easybank">
+					<h2 class="introduction__ask-users">Why choose Easybank?</h2>
+					<p class="introduction__answer">We leverage Open Banking to turn your bank account into your financial hub.
+						Control your finances like never before.</p>
+				</header>
 
-	<section class="introduction">
-		<div class="introduction__wrapper wrapper">
-			<div class="introduction__why-choose-easybank">
-				<h1 class="introduction__ask-users">Why choose Easybank?</h1>
-				<p class="introduction__answer">We leverage Open Banking to turn your bank account into your financial hub.
-					Control your finances like never before.</p>
+				<section class="introduction__cards">
+					<article class="introduction__card">
+						<img src="/easybank-landing-page/images/icon-online.svg" alt="Online Banking"
+							class="introduction__card-icon">
+						<h3 class="introduction__card-title">Online Banking</h3>
+						<p class="introduction__card-paragraph">Our modern web and mobile applications allow you to keep track of
+							your
+							finances wherever you are in the world.</p>
+					</article>
+
+					<article class="introduction__card">
+						<img src="/easybank-landing-page/images/icon-budgeting.svg" alt="Simple Budgeting"
+							class="introduction__card-icon">
+						<h3 class="introduction__card-title">Simple Budgeting</h3>
+						<p class="introduction__card-paragraph">See exactly where your money goes each month. Receive notifications
+							when you’re close to hitting your limits.</p>
+					</article>
+
+					<article class="introduction__card">
+						<img src="/easybank-landing-page/images/icon-onboarding.svg" alt="Fast Onboarding"
+							class="introduction__card-icon">
+						<h3 class="introduction__card-title">Fast Onboarding</h3>
+						<p class="introduction__card-paragraph">We don’t do branches. Open your account in minutes online and start
+							taking control of your finances right away.</p>
+					</article>
+
+					<article class="introduction__card">
+						<img src="/easybank-landing-page/images/icon-api.svg" alt="Open Api" class="introduction__card-icon">
+						<h3 class="introduction__card-title">Open API</h3>
+						<p class="introduction__card-paragraph">Manage your savings, investments, pension, and much more from one
+							account. Trackin your money has never been easier.</p>
+					</article>
+				</section>
+
 			</div>
+		</section>
 
-			<div class="introduction__cards">
-				<div class="introduction__card">
-					<img src="images/icon-online.svg" alt="introduction icon" class="introduction__card-icon">
-					<h2 class="introduction__card-title">Online Banking</h2>
-					<p class="introduction__card-paragraph">Our modern web and mobile applications allow you to keep track of your
-						finances wherever you are in the world.</p>
-				</div>
+		<section class="latest-articles">
+			<div class="latest-articles__wrapper wrapper">
+				<h2 class="latest-articles__title">Latest Articles</h2>
 
-				<div class="introduction__card">
-					<img src="images/icon-budgeting.svg" alt="introduction icon" class="introduction__card-icon">
-					<h2 class="introduction__card-title">Simple Budgeting</h2>
-					<p class="introduction__card-paragraph">See exactly where your money goes each month. Receive notifications
-						when you’re close to hitting your limits.</p>
-				</div>
+				<section class="latest-articles__cards">
+					<article class="latest-articles__card">
+						<div src="/easybank-landing-page/images/image-currency.jpg" aria-label="Currency Image"
+							class="latest-articles__article-image latest-articles__article-image-1"></div>
 
-				<div class="introduction__card">
-					<img src="images/icon-onboarding.svg" alt="introduction icon" class="introduction__card-icon">
-					<h2 class="introduction__card-title">Fast Onboarding</h2>
-					<p class="introduction__card-paragraph">We don’t do branches. Open your account in minutes online and start
-						taking control of your finances right away.</p>
-				</div>
+						<div class="latest-articles__article-wrapper">
+							<div class="latest-articles__article-who" alt="Article Writer">By Claire Robinson</div>
+							<h3 class="latest-articles__article-title">Receive money in any currency with no fees</h3>
 
-				<div class="introduction__card">
-					<img src="images/icon-api.svg" alt="introduction icon" class="introduction__card-icon">
-					<h2 class="introduction__card-title">Open API</h2>
-					<p class="introduction__card-paragraph">Manage your savings, investments, pension, and much more from one
-						account. Trackin your money has never been easier.</p>
-				</div>
+							<p class="latest-articles__article-paragraph">The world is getting smaller and we’re becoming more mobile.
+								So
+								why should you be forced to only receive money in a single …</p>
+						</div>
+					</article>
+
+					<article class="latest-articles__card">
+						<div src="/easybank-landing-page/images/image-restaurant.jpg" aria-label="Restaurant Image"
+							class="latest-articles__article-image latest-articles__article-image-2"></div>
+
+						<div class="latest-articles__article-wrapper">
+							<div class="latest-articles__article-who" alt="Article Writer">By Wilson Hutton</div>
+							<h3 class="latest-articles__article-title">Treat yourself without worrying about money</h3>
+
+							<p class="latest-articles__article-paragraph">Our simple budgeting feature allows you to separate out your
+								spending and set realistic limits each month. That means you …</p>
+						</div>
+					</article>
+
+					<article class="latest-articles__card">
+						<div aria-label="Plane Image" class="latest-articles__article-image latest-articles__article-image-3"></div>
+
+						<div class="latest-articles__article-wrapper">
+							<div class="latest-articles__article-who" alt="Article Writer">By Wilson Hutton</div>
+							<h3 class="latest-articles__article-title">Take your Easybank card
+								wherever you go</h3>
+
+							<p class="latest-articles__article-paragraph">We want you to enjoy your travels. This is why we don’t
+								charge
+								any fees on purchases while you’re abroad. We’ll even show you …</p>
+						</div>
+					</article>
+
+					<article class="latest-articles__card">
+						<div aria-label="Confetti Image" class="latest-articles__article-image latest-articles__article-image-4">
+						</div>
+
+						<div class="latest-articles__article-wrapper">
+							<div class="latest-articles__article-who" alt="Article Writer">By Claire Robinson</div>
+							<h3 class="latest-articles__article-title">Our invite-only Beta accounts are now live!</h3>
+
+							<p class="latest-articles__article-paragraph">After a lot of hard work by the whole team, we’re excited to
+								launch our closed beta. It’s easy to request an invite through the site ...</p>
+						</div>
+					</article>
+				</section>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
 
-	<section class="latest-articles">
-		<div class="laster-articles__wrapper wrapper">
-			<h1 class="latest-articles__title">Latest Articles</h1>
+	<footer class="page-footer">
+		<div class="page-footer__wrapper wrapper">
+			<img class="page-footer__logo" src="/easybank-landing-page/images/logo-for-footer.svg" alt="Easybank Logo">
 
-			<div class="latest-articles__cards">
-				<div class="latest-articles__card">
-					<img src="images/image-currency.jpg" alt="article image" class="latest-articles__article-image">
-					<div class="latest-articles__header">
-						<p class="latest-articles__article-who">By Claire Robinson</p>
-						<h2 class="latest-articles__article-title">Receive money in any currency with no fees</h2>
-					</div>
-					<p class="latest-articles__article-paragraph">The world is getting smaller and we’re becoming more mobile. So
-						why should you be forced to only receive money in a single …</p>
-				</div>
-
-				<div class="latest-articles__card">
-					<img src="images/image-restaurant.jpg" alt="article image" class="latest-articles__article-image">
-					<div class="latest-articles__header">
-						<p class="latest-articles__article-who">By Wilson Hutton</p>
-						<h2 class="latest-articles__article-title">Treat yourself without worrying about money</h2>
-					</div>
-					<p class="latest-articles__article-paragraph">Our simple budgeting feature allows you to separate out your
-						spending and set realistic limits each month. That means you …</p>
-				</div>
-
-				<div class="latest-articles__card">
-					<img src="images/image-plane.jpg" alt="article image" class="latest-articles__article-image">
-					<div class="latest-articles__header">
-						<p class="latest-articles__article-who">By Wilson Hutton</p>
-						<h2 class="latest-articles__article-title">Take your Easybank card wherever you go</h2>
-					</div>
-					<p class="latest-articles__article-paragraph">We want you to enjoy your travels. This is why we don’t charge
-						any fees on purchases while you’re abroad. We’ll even show you …</p>
-				</div>
-
-				<div class="latest-articles__card">
-					<img src="images/image-confetti.jpg" alt="article image" class="latest-articles__article-image">
-					<div class="latest-articles__header">
-						<p class="latest-articles__article-who">By Claire Robinson</p>
-						<h2 class="latest-articles__article-title">Our invite-only Beta accounts are now live!</h2>
-					</div>
-					<p class="latest-articles__article-paragraph">After a lot of hard work by the whole team, we’re excited to
-						launch our closed beta. It’s easy to request an invite through the site ...</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<footer class="footer">
-		<div class="footer__wrapper wrapper">
-
-			<img src="images/logo-for-footer.svg" alt="easybank logo" class="footer__logo">
-
-			<ul class="footer__socmed-list">
-				<li class="footer__socmed-li"><a href="#"><img src="images/icon-facebook.svg" alt="social media icon"></a></li>
-				<li class="footer__socmed-li"><a href="#"><img src="images/icon-youtube.svg" alt="social media icon"></a></li>
-				<li class="footer__socmed-li"><a href="#"><img src="images/icon-twitter.svg" alt="social media icon"></a></li>
-				<li class="footer__socmed-li"><a href="#"><img src="images/icon-pinterest.svg" alt="social media icon"></a></li>
-				<li class="footer__socmed-li"><a href="#"><img src="images/icon-instagram.svg" alt="social media icon"></a></li>
+			<ul aria-label="Social Media Links" class="page-footer__socmed-list">
+				<li><a href="#"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+							<path
+								d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z" />
+						</svg></a>
+				</li>
+				<li><a href="#"><svg fill="white" xmlns="http://www.w3.org/2000/svg" width="21" height="20">
+							<path
+								d="M10.333 0c-5.522 0-10 4.478-10 10 0 5.523 4.478 10 10 10 5.523 0 10-4.477 10-10 0-5.522-4.477-10-10-10zm3.701 14.077c-1.752.12-5.653.12-7.402 0C4.735 13.947 4.514 13.018 4.5 10c.014-3.024.237-3.947 2.132-4.077 1.749-.12 5.651-.12 7.402 0 1.898.13 2.118 1.059 2.133 4.077-.015 3.024-.238 3.947-2.133 4.077zM8.667 8.048l4.097 1.949-4.097 1.955V8.048z" />
+						</svg></a></li>
+				<li><a href="#"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="21" height="18">
+							<path
+								d="M20.667 2.797a8.192 8.192 0 01-2.357.646 4.11 4.11 0 001.804-2.27 8.22 8.22 0 01-2.606.996A4.096 4.096 0 0014.513.873c-2.649 0-4.595 2.472-3.997 5.038a11.648 11.648 0 01-8.457-4.287 4.109 4.109 0 001.27 5.478A4.086 4.086 0 011.47 6.59c-.045 1.901 1.317 3.68 3.29 4.075a4.113 4.113 0 01-1.853.07 4.106 4.106 0 003.834 2.85 8.25 8.25 0 01-6.075 1.7 11.616 11.616 0 006.29 1.843c7.618 0 11.922-6.434 11.662-12.205a8.354 8.354 0 002.048-2.124z" />
+						</svg></a></li>
+				<li><a href="#"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+							<path
+								d="M10 0C4.478 0 0 4.477 0 10c0 4.237 2.636 7.855 6.356 9.312-.088-.791-.167-2.005.035-2.868.182-.78 1.172-4.97 1.172-4.97s-.299-.6-.299-1.486c0-1.39.806-2.428 1.81-2.428.852 0 1.264.64 1.264 1.408 0 .858-.545 2.14-.828 3.33-.236.995.5 1.807 1.48 1.807 1.778 0 3.144-1.874 3.144-4.58 0-2.393-1.72-4.068-4.177-4.068-2.845 0-4.515 2.135-4.515 4.34 0 .859.331 1.781.745 2.281a.3.3 0 01.069.288l-.278 1.133c-.044.183-.145.223-.335.134-1.249-.581-2.03-2.407-2.03-3.874 0-3.154 2.292-6.052 6.608-6.052 3.469 0 6.165 2.473 6.165 5.776 0 3.447-2.173 6.22-5.19 6.22-1.013 0-1.965-.525-2.291-1.148l-.623 2.378c-.226.869-.835 1.958-1.244 2.621.937.29 1.931.446 2.962.446 5.522 0 10-4.477 10-10S15.522 0 10 0z" />
+						</svg></a></li>
+				<li><a href="#"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="21" height="20">
+							<path
+								d="M10.333 1.802c2.67 0 2.987.01 4.042.059 2.71.123 3.976 1.409 4.1 4.099.048 1.054.057 1.37.057 4.04 0 2.672-.01 2.988-.058 4.042-.124 2.687-1.386 3.975-4.099 4.099-1.055.048-1.37.058-4.042.058-2.67 0-2.986-.01-4.04-.058-2.717-.124-3.976-1.416-4.1-4.1-.048-1.054-.058-1.37-.058-4.041 0-2.67.01-2.986.058-4.04.124-2.69 1.387-3.977 4.1-4.1 1.054-.048 1.37-.058 4.04-.058zm0-1.802C7.618 0 7.278.012 6.211.06 2.579.227.56 2.242.394 5.877.345 6.944.334 7.284.334 10s.011 3.057.06 4.123c.166 3.632 2.181 5.65 5.816 5.817 1.068.048 1.408.06 4.123.06 2.716 0 3.057-.012 4.124-.06 3.628-.167 5.651-2.182 5.816-5.817.049-1.066.06-1.407.06-4.123s-.011-3.056-.06-4.122C20.11 2.249 18.093.228 14.458.06 13.39.01 13.049 0 10.333 0zm0 4.865a5.135 5.135 0 100 10.27 5.135 5.135 0 000-10.27zm0 8.468a3.333 3.333 0 110-6.666 3.333 3.333 0 010 6.666zm5.339-9.87a1.2 1.2 0 10-.001 2.4 1.2 1.2 0 000-2.4z" />
+						</svg></a></li>
 			</ul>
 
-			<ul class="footer__link-list footer__link-list-1">
-				<li class="footer__link-li"><a href="#">About Us</a></li>
-				<li class="footer__link-li"><a href="#">Contact</a></li>
-				<li class="footer__link-li"><a href="#">Blog</a></li>
+			<ul class="page-footer__link-list page-footer__link-list-1" aria-label="Footer Navigation Links">
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Blog</a></li>
 			</ul>
 
-			<ul class="footer__link-list footer__link-list-2">
-				<li class="footer__link-li"><a href="#">Careers</a></li>
-				<li class="footer__link-li"><a href="#">Support</a></li>
-				<li class="footer__link-li"><a href="#">Privacy Policy</a></li>
+			<ul class="page-footer__link-list page-footer__link-list-2" aria-label="Footer Navigation Links">
+				<li><a href="#">Careers</a></li>
+				<li><a href="#">Support</a></li>
+				<li><a href="#">Privacy Policy</a></li>
 			</ul>
 
-			<button class="btn-cta footer__btn-cta">Request Invite</button>
+			<button class="btn-cta page-footer__btn-cta" aria-label="Request Invite">Request Invite</button>
 
-			<p class="footer__copyright">© Easybank. All Rights Reserved</p>
+			<p class="page-footer__copyright">© Easybank. All Rights Reserved</p>
 		</div>
 	</footer>
 
+	<script src="app.js"></script>
 </body>
 
 </html>
