--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -114,7 +114,7 @@
 							class="latest-articles__article-image latest-articles__article-image-1"></div>
 
 						<div class="latest-articles__article-wrapper">
-							<div class="latest-articles__article-who" alt="Article Writer">By Claire Robinson</div>
+							<div class="latest-articles__article-who" aria-label="Article Writer">By Claire Robinson</div>
 							<h3 class="latest-articles__article-title">Receive money in any currency with no fees</h3>
 
 							<p class="latest-articles__article-paragraph">The world is getting smaller and we’re becoming more mobile.
@@ -128,7 +128,7 @@
 							class="latest-articles__article-image latest-articles__article-image-2"></div>
 
 						<div class="latest-articles__article-wrapper">
-							<div class="latest-articles__article-who" alt="Article Writer">By Wilson Hutton</div>
+							<div class="latest-articles__article-who" aria-label="Article Writer">By Wilson Hutton</div>
 							<h3 class="latest-articles__article-title">Treat yourself without worrying about money</h3>
 
 							<p class="latest-articles__article-paragraph">Our simple budgeting feature allows you to separate out your
@@ -140,7 +140,7 @@
 						<div aria-label="Plane Image" class="latest-articles__article-image latest-articles__article-image-3"></div>
 
 						<div class="latest-articles__article-wrapper">
-							<div class="latest-articles__article-who" alt="Article Writer">By Wilson Hutton</div>
+							<div class="latest-articles__article-who" aria-label="Article Writer">By Wilson Hutton</div>
 							<h3 class="latest-articles__article-title">Take your Easybank card
 								wherever you go</h3>
 
@@ -155,7 +155,7 @@
 						</div>
 
 						<div class="latest-articles__article-wrapper">
-							<div class="latest-articles__article-who" alt="Article Writer">By Claire Robinson</div>
+							<div class="latest-articles__article-who" aria-label="Article Writer">By Claire Robinson</div>
 							<h3 class="latest-articles__article-title">Our invite-only Beta accounts are now live!</h3>
 
 							<p class="latest-articles__article-paragraph">After a lot of hard work by the whole team, we’re excited to
