--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -209,7 +209,8 @@
 
 			<button class="btn-cta page-footer__btn-cta" aria-label="Request Invite">Request Invite</button>
 
-			<p class="page-footer__copyright">© Easybank. All Rights Reserved</p>
+			<p class="page-footer__copyright">Design by: <a href="https://www.frontendmentor.io/" target="__blank">Frontend
+					Mentor</a></a></p>
 		</div>
 	</footer>
 
