--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -203,7 +203,8 @@
 
 			<img src="/manage-landing-page/images/logo_light.svg" alt="Manage Logo" class="footer__logo">
 
-			<p class="footer__copyright">Copyright &copy; 2020. All Rights Reserved</p>
+			<p class="footer__copyright">Design by: <a href="https://www.frontendmentor.io/" target="__blank">Frontend
+					Mentor</a></p>
 		</div>
 	</footer>
 
