--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -37,14 +37,13 @@
 			<div class="record">
 				<article class="record__card">
 					<h2 class="record__name">Communities Formed</h2>
-					<img class="record__icon record__icon--large" src="/huddle-landing-page/images/icon-communities.svg"
-						alt="Community Icon">
+					<img class="record__icon record__icon--large" src="/huddle-landing-page/images/icon-communities.svg" alt="">
 					<p class="record__number">1.4k+</p>
 				</article>
 
 				<article class="record__card">
 					<h2 class="record__name">Messages Sent</h2>
-					<img class="record__icon" src="/huddle-landing-page/images/icon-messages.svg" alt="Message Icon">
+					<img class="record__icon" src="/huddle-landing-page/images/icon-messages.svg" alt="">
 					<p class="record__number">2.7m+</p>
 				</article>
 			</div>
@@ -126,9 +125,9 @@
 						class="designLink">Frontend Mentor</a></p>
 
 				<ul class="pageFooter__contacts-1">
-					<li><img src="/huddle-landing-page/images/icon-phone.svg" alt="phone icon"><span>Phone: +1-543-123-4567</span>
+					<li><img src="/huddle-landing-page/images/icon-phone.svg" alt=""><span>Phone: +1-543-123-4567</span>
 					</li>
-					<li><img src="/huddle-landing-page/images/icon-email.svg" alt="email icon"><span>example@huddle.com
+					<li><img src="/huddle-landing-page/images/icon-email.svg" alt=""><span>example@huddle.com
 					</li>
 				</ul>
 
