add height value to <img> tag

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 			<div class="md:m-6">
 				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
-					<img width="384" src="assets/images/easybank-landing-page.jpg" alt="Easybank Landing Page Website Image">
+					<img width="384" height="282" src="assets/images/easybank-landing-page.jpg"
+						alt="Easybank Landing Page Website Image">
 				</div>
 				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
 					<h1 class="font-poppins text-xl font-semibold text-center">Easybank Landing Page</h1>
@@ -70,7 +71,8 @@
 
 			<div class="mt-8 md:m-6">
 				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
-					<img width="384" src="assets/images/huddle-landing-page.jpg" alt="Huddle Landing Page Website Image">
+					<img width="384" height="282" src="assets/images/huddle-landing-page.jpg"
+						alt="Huddle Landing Page Website Image">
 				</div>
 				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
 					<h1 class="font-poppins text-xl font-semibold text-center">Huddle Landing Page</h1>
@@ -90,7 +92,8 @@
 
 			<div class="mt-8 md:m-6">
 				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
-					<img width="384" src="assets/images/manage-landing-page.jpg" alt="Manage Landing Page Website Image">
+					<img width="384" height="282" src="assets/images/manage-landing-page.jpg"
+						alt="Manage Landing Page Website Image">
 				</div>
 				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
 					<h1 class="font-poppins text-xl font-semibold text-center">Manage Landing Page</h1>
@@ -110,7 +113,8 @@
 
 			<div class="mt-8 md:m-6">
 				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
-					<img width="384" src="assets/images/social-proof-section.jpg" alt="Social Proof Section Website Image">
+					<img width="384" height="282" src="assets/images/social-proof-section.jpg"
+						alt="Social Proof Section Website Image">
 				</div>
 				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
 					<h1 class="font-poppins text-xl font-semibold text-center">Social Proof Section</h1>
@@ -130,7 +134,7 @@
 
 			<div class="mt-8 md:m-6">
 				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
-					<img width="384" src="assets/images/testimonials-grid-section.jpg"
+					<img width="384" height="281" src="assets/images/testimonials-grid-section.jpg"
 						alt="Testimonials Grid Section Website Image">
 				</div>
 				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
