--- a/manage-landing-page/index.html
+++ b/manage-landing-page/index.html
@@ -210,7 +210,7 @@
 
 	<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
-	<script src="/manage-landing-page/app.js"></script>
+	<script src="./app.js"></script>
 </body>
 
 </html>
