--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -147,7 +147,7 @@
 	</footer>
 
 	<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-	<script src="./app.js"></script>
+	<script src="/huddle-landing-page/app.js"></script>
 </body>
 
 </html>
