--- a/easybank-landing-page/index.html
+++ b/easybank-landing-page/index.html
@@ -214,7 +214,7 @@
 		</div>
 	</footer>
 
-	<script src="./app.js"></script>
+	<script src="/easybank-landing-page/app.js"></script>
 </body>
 
 </html>
