--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               Design by:
               <a
                 class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
-                href="https://https://www.figma.com/community/file/966938373747932093"
+                href="https://www.figma.com/community/file/966938373747932093"
                 target="_blank"
                 >Dwinawan</a
               >
